@@ -7,15 +7,18 @@ import java.util.*;
  */
 public class GraphTraversal<NODE> {
 private Graph<NODE> graph;
-/** the set of nodes. Documented during traversal. */
+/** the set of nodes.
+ * Documented by traversal. */
 protected HashSet<NODE> hs;
 
 public GraphTraversal(Graph<NODE> graph) {
     this.graph = graph ;
 }
 
+/** The traversed graph. */
 public Graph<NODE> getGraph() { return this.graph; }
 
+/** A simple traversal of the graph that just computes its set of nodes */
 public void simpleWalk() throws Exception {
     this.hs = new HashSet<NODE>() ;
     NODE[] seeds = this.graph.seeds();
@@ -35,21 +38,24 @@ protected void simpleWalk(NODE node) throws Exception{
     }
 }
 
-/** if result has not been computed yet, makes a simpleWalk.
- *  (if you don't want computing, use this.hs) */
+/** 
+ * The set of nodes in the graph
+ */
+ // If result has not been computed yet, makes a simpleWalk.
+ // (if you don't want computing, use this.hs)
 public HashSet<NODE> getNodes() throws Exception {
     if (this.hs == null) simpleWalk();
     return this.hs ;
 }
 
 //
-//WALK
+// WALK
 //
 
 /**
  * Depth-first traversal. 
  * 
- * <p>Il y a deux façons de faire pour la gestions des "seeds".</p>
+ * <p>Il y a deux façons de faire pour la gestion des "seeds".</p>
  * <p>On peut les traiter comme si elles étaient les voisins d'un noeud "root"
  * (on a alors un vrai parcours en profondeur d'abord)
  * - c'est ce que fait cette méthode.</p>
@@ -63,26 +69,27 @@ public HashSet<NODE> getNodes() throws Exception {
 public void depthFirstWalk(WalkListener<NODE> walkListener) throws Exception {
     depthFirstWalk(walkListener, null, null);
 }
+
 /**
  * Depth-first traversal. 
  *
- * <p>HOW TO USE: implements WalkListener (for instance extending WalkListenerAdapter),
+ * <p>HOW TO USE: implements WalkListener (for instance extending WalkListenerImpl),
  * and call this method. By storing a Stack stack or treePosition as attribute of
  * the class implementing  WalkListener, you can use their content in the implementing methods.</p>
  * @see class SimplePrinter as an example
  * @param walkListener
- * @param stack: if not null, the nodes handled during traversal are pushed / poped onto this stack
+ * @param stack: if not null, the nodes handled during traversal are pushed / popped onto this stack
  * So, supposing <UL>
  * <li>that you passed an empty Stack stack when calling this method</li>
  * <li>that you are receiving one of the methods of the walkListener with arg node,</li> 
  * <li>and that stack contains "seed1,node3",<li>
  * then node is a neighbor of node3, which in turn is a neighbor of seed1.
  * A node is pushed on this stack at the moment we are about to process the list of its neighbors
- * (after sending startNeighborList() to walkListener) , and poped just before sending endNeighborList()
+ * (after sending startNeighborList() to walkListener) , and popped just before sending endNeighborList()
  * If a node doesn't have any neighbor, it is never pushed on stack.
  * Note that stack treePosition (if used) has one element more than stack.
  * @param treePosition: if not null, the positions of nodes handled during traversal 
- * are pushed / poped onto this stack.
+ * are pushed / popped onto this stack.
  * So, supposing <UL>
  * <li>that you passed an empty Stack treePosition when calling this method</li>
  * <li>that you are receiving one of the methods of the walkListener with arg node,</li> 
@@ -97,7 +104,7 @@ public void depthFirstWalk(WalkListener<NODE> walkListener, Stack<NODE> stack, S
     for (int i = 0; i < seeds.length; i++) {
         NODE node = seeds[i];
         boolean notVisitedYet = this.hs.add(node);
-        if (treePosition != null) treePosition.push(new Integer(i));
+        if (treePosition != null) treePosition.push(Integer.valueOf(i));
         walkListener.startSeed(node);
         if (notVisitedYet) {
             walk(node, walkListener, stack, treePosition);
@@ -116,6 +123,7 @@ public void depthFirstWalk(WalkListener<NODE> walkListener, Stack<NODE> stack, S
 public void walk(WalkListener<NODE> walkListener) throws Exception {
     walk(walkListener, null, null);
 }
+
 /**
  * Depth-first traversal. 
  * 
@@ -135,27 +143,15 @@ public void walk(WalkListener<NODE> walkListener, Stack<NODE> stack, Stack<Integ
         if (!notVisitedYet) duplicateSeeds = true;
     }
     // remove duplicates from seeds, if any
-    /*
-    // Fais chier, je ne sais pas comment passer correctement cette ligne avec les generics
-    if (duplicateSeeds) seeds = this.hs.toArray(new Object[hs.size()]);
-    for (int i = 0; i < seeds.length; i++) {
-        Object node = seeds[i];
-        if (treePosition != null) treePosition.push(new Integer(i));
-        walkListener.startSeed(node);
-        walk(node, walkListener, stack, treePosition);
-        walkListener.endSeed(node);
-        if (treePosition != null) treePosition.pop();
-    }
-    */
     int seedsNb = seeds.length;
     if (duplicateSeeds) {
     	seeds = this.hs.toArray(seeds); // attention, seeds array too big: last items will be null
     	seedsNb = hs.size();
     }
  
-    for (int i = 0; i < seedsNb; i++) { // not seedsNb, not seeds.length (there are null items at the end if duplicateSeeds)
+    for (int i = 0; i < seedsNb; i++) { // seedsNb, not seeds.length (there are null items at the end if duplicateSeeds)
     	NODE node = seeds[i];
-      if (treePosition != null) treePosition.push(new Integer(i));
+      if (treePosition != null) treePosition.push(Integer.valueOf(i));
       walkListener.startSeed(node);
       walk(node, walkListener, stack, treePosition);
       walkListener.endSeed(node);
@@ -175,7 +171,7 @@ protected void walk(NODE node, WalkListener<NODE> walkListener, Stack<NODE> stac
         for (int i = 0 ; it.hasNext() ; i++) {
         		NODE neighbor = it.next();
             boolean notVisitedYet = this.hs.add(neighbor);
-            if (treePosition != null) treePosition.push(new Integer(i));
+            if (treePosition != null) treePosition.push(Integer.valueOf(i));
             if (notVisitedYet) {
                 walkListener.startNode(neighbor);
                 walk(neighbor, walkListener, stack, treePosition);
@@ -190,42 +186,8 @@ protected void walk(NODE node, WalkListener<NODE> walkListener, Stack<NODE> stac
     }
 }
 
-
-/*public interface WalkListener<NODE> {
-		*//** Gets called when beginning a seed. *//*
-    public void startSeed(NODE seed) throws Exception;
-		*//** Gets called when beginning to handle the list of neighbors of node. 
-		 *  The list is not empty. If it is empty, noNeighborList gets called instead. *//*
-    public void startNeighborList(NODE node) throws Exception;
-		*//** Gets called if node has no neighbors. *//*
-    public void noNeighborList(NODE node) throws Exception;
-		*//** Gets called when beginning a node (other than a seed) that has not been seen before. *//*
-    public void startNode(NODE node) throws Exception;
-		*//** Gets called when ending a node (other than a seed) that has not been seen before. *//*
-    public void endNode(NODE node) throws Exception;
-		*//** Gets called when node has already been traversed. *//*
-    public void repeatNode(NODE node) throws Exception;
-		*//** Gets called at the end of the handling of the list of neighbors of node. 
-		 *  Not called when this list is empty. *//*
-    public void endNeighborList(NODE node) throws Exception;
-		*//** Gets called when ending a seed. *//*
-    public void endSeed(NODE seed) throws Exception;
-}
-*/
-
-//public class WalkListenerAdapter implements WalkListener<NODE> {
-//    public void startSeed(NODE seed) throws Exception {}
-//    public void startNeighborList(NODE node) throws Exception {}
-//    public void noNeighborList(NODE node) throws Exception {}
-//    public void startNode(NODE node) throws Exception {}
-//    public void endNode(NODE node) throws Exception {}
-//    public void repeatNode(NODE node) throws Exception {}
-//    public void endNeighborList(NODE node) throws Exception {}
-//    public void endSeed(NODE seed) throws Exception {}
-//}
-
 //
-//EXAMPLE OF USE / PRINTING THE GRAPH AS A TREE
+// EXAMPLE OF USE / PRINTING THE GRAPH AS A TREE
 //
 
 public void print() throws Exception {
@@ -238,7 +200,7 @@ public void print() throws Exception {
 static public class SimplePrinter<NODE2> extends WalkListenerImpl<NODE2> {
     private Stack<NODE2> stack;
     private Stack<Integer> treePosition;
-    protected SimplePrinter(Stack<NODE2> stack, Stack<Integer> treePosition) {
+    public SimplePrinter(Stack<NODE2> stack, Stack<Integer> treePosition) {
         this.stack = stack;
         this.treePosition = treePosition;
     }
@@ -258,9 +220,7 @@ static public class SimplePrinter<NODE2> extends WalkListenerImpl<NODE2> {
         int n = stack.size();
         if (n == 0) return "";
         StringBuilder sb = new StringBuilder(n);
-        for (int i = 0; i < n; i++) {
-            sb.append("\t");
-        }
+        for (int i = 0; i < n; i++) sb.append("\t");
         return sb.toString();
     }
     public String position() {
